[package]
name = "rand_regex"
version = "0.15.0"
authors = ["kennytm <kennytm@gmail.com>"]
description = "Generates random strings and byte strings matching a regex"
repository = "https://github.com/kennytm/rand_regex"
readme = "README.md"
keywords = ["regex", "random", "generator"]
categories = ["algorithms", "text-processing"]
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "kennytm/rand_regex", branch = "master" }
is-it-maintained-issue-resolution = { repository = "kennytm/rand_regex" }
is-it-maintained-open-issues = { repository = "kennytm/rand_regex" }
maintenance = { status = "passively-maintained" }

[features]
default = ["unicode"]
unicode = ["regex-syntax/unicode"]

[[bench]]
name = "benchmark"
harness = false

[dependencies]
rand = "0.8"
regex-syntax = { version = "0.6", default-features = false }

[dev-dependencies]
regex = { version = "1.3", default-features = false, features = ["std", "unicode"] }
rand_xorshift = "0.3"
rand_distr = "0.4"
criterion = "0.3"

[profile.bench]
debug = 2
