[package]
name = "rand_regex"
version = "0.18.1"
authors = ["kennytm <kennytm@gmail.com>"]
description = "Generates random strings and byte strings matching a regex"
repository = "https://github.com/kennytm/rand_regex"
readme = "README.md"
keywords = ["regex", "random", "generator"]
categories = ["algorithms", "text-processing"]
license = "MIT"
edition = "2021"
rust-version = "1.71.1"

[badges]
travis-ci = { repository = "kennytm/rand_regex", branch = "master" }
is-it-maintained-issue-resolution = { repository = "kennytm/rand_regex" }
is-it-maintained-open-issues = { repository = "kennytm/rand_regex" }
maintenance = { status = "passively-maintained" }

[features]
default = ["unicode"]
unicode = ["regex-syntax/unicode"]

[[bench]]
name = "benchmark"
harness = false

[dependencies]
rand = { version = "0.9", default-features = false }
regex-syntax = { version = "0.8.5", default-features = false, features = ["std"] }

[dev-dependencies]
rand = "0.9"
regex = { version = "1.11", default-features = false, features = ["std", "unicode"] }
rand_xorshift = "0.4"
rand_distr = "0.5"
criterion = "0.5"

[profile.bench]
debug = 2
